--- a/src/assets/css/2-modules/_header.sass
+++ b/src/assets/css/2-modules/_header.sass
@@ -1,5 +1,5 @@
 header
-    height: 100vh
+    height: 600px
     background:
         image: url("/assets/img/hero.png")
         size: cover
@@ -10,7 +10,7 @@ header
     .hero-overlay
         position: absolute
         width: 100%
-        height: 100%
+        height: 600px
         top: 0
         left: 0
         right: 0
@@ -18,7 +18,7 @@ header
         background-color: rgba(0,0,0,0.66)
 
         .hero-wrap
-            height: 100vh
+            height: 600px
             display: flex
             flex-direction: column
             justify-content: center
@@ -27,4 +27,5 @@ header
             
             img
                 align-self: center
+                height: 100px
                 
